Nectar-regression/src/main/java/com/zinnia/nectar/regression/antlr/language/parser/NectarParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g 2012-04-03 15:10:45

package com.zinnia.nectar.regression.antlr.language.parser;

import com.zinnia.nectar.regression.language.primitive.PrimitiveTypeImplFactory;
import com.zinnia.nectar.regression.language.primitive.IPrimitiveType;
import java.util.concurrent.Future;
import java.util.ArrayList;
import java.util.List;
import java.util.Map;
import com.zinnia.nectar.regression.language.complex.impl.ComplexTypeImpl ;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
public class NectarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LEFT_PAREN", "RIGHT_PAREN", "FORWARDSLASH", "HELP", "SIGMAX", "SIGMAXY", "SIGMAXSQUARE", "MEAN", "CORR", "CORRMATRIX", "MULTIPLEREG", "FORWARDSELECTION", "SORT", "COV", "COVMATRIX", "STDIN_OP", "DOT", "COMMA", "EXTN", "NEWLINE", "ID", "INT", "FLOAT", "SPACE", "WHITESPACE", "SINGLE_COMMENT", "MULTI_COMMENT", "DOUBLE", "TOK_SIGMAX", "TOK_SIGMAXY", "TOK_SIGMAXSQUARE", "TOK_MEAN", "TOK_CORR", "TOK_CORRMATRIX", "TOK_MULTIPLEREG", "TOK_FORWARDSELECTION", "TOK_SORT", "TOK_COV", "TOK_COVMATRIX", "TOK_HELP"
    };
    public static final int HELP=7;
    public static final int EXTN=22;
    public static final int COVMATRIX=18;
    public static final int TOK_FORWARDSELECTION=39;
    public static final int FORWARDSLASH=6;
    public static final int CORRMATRIX=13;
    public static final int MEAN=11;
    public static final int MULTI_COMMENT=30;
    public static final int TOK_COV=41;
    public static final int MULTIPLEREG=14;
    public static final int TOK_COVMATRIX=42;
    public static final int FLOAT=26;
    public static final int ID=24;
    public static final int SPACE=27;
    public static final int EOF=-1;
    public static final int SIGMAXY=9;
    public static final int RIGHT_PAREN=5;
    public static final int STDIN_OP=19;
    public static final int COV=17;
    public static final int COMMA=21;
    public static final int TOK_CORR=36;
    public static final int DOUBLE=31;
    public static final int SINGLE_COMMENT=29;
    public static final int SIGMAXSQUARE=10;
    public static final int DOT=20;
    public static final int SIGMAX=8;
    public static final int TOK_SIGMAXSQUARE=34;
    public static final int SORT=16;
    public static final int WHITESPACE=28;
    public static final int INT=25;
    public static final int TOK_SORT=40;
    public static final int TOK_MEAN=35;
    public static final int TOK_MULTIPLEREG=38;
    public static final int TOK_CORRMATRIX=37;
    public static final int NEWLINE=23;
    public static final int FORWARDSELECTION=15;
    public static final int LEFT_PAREN=4;
    public static final int TOK_SIGMAX=32;
    public static final int TOK_HELP=43;
    public static final int TOK_SIGMAXY=33;
    public static final int CORR=12;

    // delegates
    // delegators


        public NectarParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public NectarParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return NectarParser.tokenNames; }
    public String getGrammarFileName() { return "com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g"; }

     
      List<Integer> list = new ArrayList<Integer>();
      List<String> filenameList = new ArrayList<String>();
        IPrimitiveType primitiveImpl; 
      ComplexTypeImpl complexTypeImpl = new ComplexTypeImpl();  
    	
    	//error handling
    Stack paraphrases = new Stack();
    public String getErrorMessage(RecognitionException e,
    String[] tokenNames)
    {
    String msg = super.getErrorMessage(e, tokenNames);
    if ( paraphrases.size()>0 ) {
    String paraphrase = (String)paraphrases.peek();
    msg = msg+" "+paraphrase;
    }
    return msg;
    }


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "start"
    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:75:1: start : statement EOF ;
    public final NectarParser.start_return start() throws RecognitionException {
        NectarParser.start_return retval = new NectarParser.start_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        NectarParser.statement_return statement1 = null;


        Object EOF2_tree=null;

        try {
            // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:75:7: ( statement EOF )
            // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:75:9: statement EOF
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_statement_in_start105);
            statement1=statement();

            state._fsp--;

            adaptor.addChild(root_0, statement1.getTree());
            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_start107); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "start"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:1: statement : ( sigmax | sigmaxy | sigmaxsquare | mean | correlation | correlationmatrix | multiplereg | forwardselection | sort | cov | covmatrix | help );
    public final NectarParser.statement_return statement() throws RecognitionException {
        NectarParser.statement_return retval = new NectarParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        NectarParser.sigmax_return sigmax3 = null;

        NectarParser.sigmaxy_return sigmaxy4 = null;

        NectarParser.sigmaxsquare_return sigmaxsquare5 = null;

        NectarParser.mean_return mean6 = null;

        NectarParser.correlation_return correlation7 = null;

        NectarParser.correlationmatrix_return correlationmatrix8 = null;

        NectarParser.multiplereg_return multiplereg9 = null;

        NectarParser.forwardselection_return forwardselection10 = null;

        NectarParser.sort_return sort11 = null;

        NectarParser.cov_return cov12 = null;

        NectarParser.covmatrix_return covmatrix13 = null;

        NectarParser.help_return help14 = null;



        try {
            // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:11: ( sigmax | sigmaxy | sigmaxsquare | mean | correlation | correlationmatrix | multiplereg | forwardselection | sort | cov | covmatrix | help )
            int alt1=12;
            switch ( input.LA(1) ) {
            case SIGMAX:
                {
                alt1=1;
                }
                break;
            case SIGMAXY:
                {
                alt1=2;
                }
                break;
            case SIGMAXSQUARE:
                {
                alt1=3;
                }
                break;
            case MEAN:
                {
                alt1=4;
                }
                break;
            case CORR:
                {
                alt1=5;
                }
                break;
            case CORRMATRIX:
                {
                alt1=6;
                }
                break;
            case MULTIPLEREG:
                {
                alt1=7;
                }
                break;
            case FORWARDSELECTION:
                {
                alt1=8;
                }
                break;
            case SORT:
                {
                alt1=9;
                }
                break;
            case COV:
                {
                alt1=10;
                }
                break;
            case COVMATRIX:
                {
                alt1=11;
                }
                break;
            case HELP:
                {
                alt1=12;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:13: sigmax
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_sigmax_in_statement123);
                    sigmax3=sigmax();

                    state._fsp--;

                    adaptor.addChild(root_0, sigmax3.getTree());

                    }
                    break;
                case 2 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:22: sigmaxy
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_sigmaxy_in_statement127);
                    sigmaxy4=sigmaxy();

                    state._fsp--;

                    adaptor.addChild(root_0, sigmaxy4.getTree());

                    }
                    break;
                case 3 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:32: sigmaxsquare
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_sigmaxsquare_in_statement131);
                    sigmaxsquare5=sigmaxsquare();

                    state._fsp--;

                    adaptor.addChild(root_0, sigmaxsquare5.getTree());

                    }
                    break;
                case 4 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:47: mean
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_mean_in_statement135);
                    mean6=mean();

                    state._fsp--;

                    adaptor.addChild(root_0, mean6.getTree());

                    }
                    break;
                case 5 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:53: correlation
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_correlation_in_statement138);
                    correlation7=correlation();

                    state._fsp--;

                    adaptor.addChild(root_0, correlation7.getTree());

                    }
                    break;
                case 6 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:67: correlationmatrix
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_correlationmatrix_in_statement142);
                    correlationmatrix8=correlationmatrix();

                    state._fsp--;

                    adaptor.addChild(root_0, correlationmatrix8.getTree());

                    }
                    break;
                case 7 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:87: multiplereg
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_multiplereg_in_statement146);
                    multiplereg9=multiplereg();

                    state._fsp--;

                    adaptor.addChild(root_0, multiplereg9.getTree());

                    }
                    break;
                case 8 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:101: forwardselection
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_forwardselection_in_statement150);
                    forwardselection10=forwardselection();

                    state._fsp--;

                    adaptor.addChild(root_0, forwardselection10.getTree());

                    }
                    break;
                case 9 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:120: sort
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_sort_in_statement154);
                    sort11=sort();

                    state._fsp--;

                    adaptor.addChild(root_0, sort11.getTree());

                    }
                    break;
                case 10 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:127: cov
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_cov_in_statement158);
                    cov12=cov();

                    state._fsp--;

                    adaptor.addChild(root_0, cov12.getTree());

                    }
                    break;
                case 11 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:133: covmatrix
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_covmatrix_in_statement162);
                    covmatrix13=covmatrix();

                    state._fsp--;

                    adaptor.addChild(root_0, covmatrix13.getTree());

                    }
                    break;
                case 12 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:77:145: help
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_help_in_statement166);
                    help14=help();

                    state._fsp--;

                    adaptor.addChild(root_0, help14.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class sigmax_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sigmax"
    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:80:1: sigmax : ( SIGMAX LEFT_PAREN column_no= INT RIGHT_PAREN STDIN_OP ip= ID -> ^( TOK_SIGMAX $column_no $ip) | SIGMAX LEFT_PAREN column_no= INT RIGHT_PAREN STDIN_OP directory= ID (filenameList+= FORWARDSLASH filenameList+= ID )+ -> ^( TOK_SIGMAX $column_no $directory ( $filenameList $filenameList)+ ) );
    public final NectarParser.sigmax_return sigmax() throws RecognitionException {
        NectarParser.sigmax_return retval = new NectarParser.sigmax_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token column_no=null;
        Token ip=null;
        Token directory=null;
        Token SIGMAX15=null;
        Token LEFT_PAREN16=null;
        Token RIGHT_PAREN17=null;
        Token STDIN_OP18=null;
        Token SIGMAX19=null;
        Token LEFT_PAREN20=null;
        Token RIGHT_PAREN21=null;
        Token STDIN_OP22=null;
        Token filenameList=null;
        List list_filenameList=null;

        Object column_no_tree=null;
        Object ip_tree=null;
        Object directory_tree=null;
        Object SIGMAX15_tree=null;
        Object LEFT_PAREN16_tree=null;
        Object RIGHT_PAREN17_tree=null;
        Object STDIN_OP18_tree=null;
        Object SIGMAX19_tree=null;
        Object LEFT_PAREN20_tree=null;
        Object RIGHT_PAREN21_tree=null;
        Object STDIN_OP22_tree=null;
        Object filenameList_tree=null;
        RewriteRuleTokenStream stream_LEFT_PAREN=new RewriteRuleTokenStream(adaptor,"token LEFT_PAREN");
        RewriteRuleTokenStream stream_RIGHT_PAREN=new RewriteRuleTokenStream(adaptor,"token RIGHT_PAREN");
        RewriteRuleTokenStream stream_STDIN_OP=new RewriteRuleTokenStream(adaptor,"token STDIN_OP");
        RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
        RewriteRuleTokenStream stream_FORWARDSLASH=new RewriteRuleTokenStream(adaptor,"token FORWARDSLASH");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_SIGMAX=new RewriteRuleTokenStream(adaptor,"token SIGMAX");

         paraphrases.push("\n"+"USAGE :sigmax(column_no)<<input_file"+"\n"+"Type [HELP|help|?] for usage of all commands"); 
        try {
            // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:83:1: ( SIGMAX LEFT_PAREN column_no= INT RIGHT_PAREN STDIN_OP ip= ID -> ^( TOK_SIGMAX $column_no $ip) | SIGMAX LEFT_PAREN column_no= INT RIGHT_PAREN STDIN_OP directory= ID (filenameList+= FORWARDSLASH filenameList+= ID )+ -> ^( TOK_SIGMAX $column_no $directory ( $filenameList $filenameList)+ ) )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==SIGMAX) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==LEFT_PAREN) ) {
                    int LA3_2 = input.LA(3);

                    if ( (LA3_2==INT) ) {
                        int LA3_3 = input.LA(4);

                        if ( (LA3_3==RIGHT_PAREN) ) {
                            int LA3_4 = input.LA(5);

                            if ( (LA3_4==STDIN_OP) ) {
                                int LA3_5 = input.LA(6);

                                if ( (LA3_5==ID) ) {
                                    int LA3_6 = input.LA(7);

                                    if ( (LA3_6==EOF) ) {
                                        alt3=1;
                                    }
                                    else if ( (LA3_6==FORWARDSLASH) ) {
                                        alt3=2;
                                    }
                                    else {
                                        NoViableAltException nvae =
                                            new NoViableAltException("", 3, 6, input);

                                        throw nvae;
                                    }
                                }
                                else {
                                    NoViableAltException nvae =
                                        new NoViableAltException("", 3, 5, input);

                                    throw nvae;
                                }
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 3, 4, input);

                                throw nvae;
                            }
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 3, 3, input);

                            throw nvae;
                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:83:3: SIGMAX LEFT_PAREN column_no= INT RIGHT_PAREN STDIN_OP ip= ID
                    {
                    SIGMAX15=(Token)match(input,SIGMAX,FOLLOW_SIGMAX_in_sigmax207);  
                    stream_SIGMAX.add(SIGMAX15);

                    LEFT_PAREN16=(Token)match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_sigmax209);  
                    stream_LEFT_PAREN.add(LEFT_PAREN16);

                    column_no=(Token)match(input,INT,FOLLOW_INT_in_sigmax213);  
                    stream_INT.add(column_no);

                    RIGHT_PAREN17=(Token)match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_sigmax215);  
                    stream_RIGHT_PAREN.add(RIGHT_PAREN17);

                    STDIN_OP18=(Token)match(input,STDIN_OP,FOLLOW_STDIN_OP_in_sigmax217);  
                    stream_STDIN_OP.add(STDIN_OP18);

                    ip=(Token)match(input,ID,FOLLOW_ID_in_sigmax221);  
                    stream_ID.add(ip);



                    // AST REWRITE
                    // elements: ip, column_no
                    // token labels: column_no, ip
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleTokenStream stream_column_no=new RewriteRuleTokenStream(adaptor,"token column_no",column_no);
                    RewriteRuleTokenStream stream_ip=new RewriteRuleTokenStream(adaptor,"token ip",ip);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 83:61: -> ^( TOK_SIGMAX $column_no $ip)
                    {
                        // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:83:64: ^( TOK_SIGMAX $column_no $ip)
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(TOK_SIGMAX, "TOK_SIGMAX"), root_1);

                        adaptor.addChild(root_1, stream_column_no.nextNode());
                        adaptor.addChild(root_1, stream_ip.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:85:3: SIGMAX LEFT_PAREN column_no= INT RIGHT_PAREN STDIN_OP directory= ID (filenameList+= FORWARDSLASH filenameList+= ID )+
                    {
                    SIGMAX19=(Token)match(input,SIGMAX,FOLLOW_SIGMAX_in_sigmax247);  
                    stream_SIGMAX.add(SIGMAX19);

                    LEFT_PAREN20=(Token)match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_sigmax249);  
                    stream_LEFT_PAREN.add(LEFT_PAREN20);

                    column_no=(Token)match(input,INT,FOLLOW_INT_in_sigmax253);  
                    stream_INT.add(column_no);

                    RIGHT_PAREN21=(Token)match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_sigmax255);  
                    stream_RIGHT_PAREN.add(RIGHT_PAREN21);

                    STDIN_OP22=(Token)match(input,STDIN_OP,FOLLOW_STDIN_OP_in_sigmax257);  
                    stream_STDIN_OP.add(STDIN_OP22);

                    directory=(Token)match(input,ID,FOLLOW_ID_in_sigmax261);  
                    stream_ID.add(directory);

                    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:85:69: (filenameList+= FORWARDSLASH filenameList+= ID )+
                    int cnt2=0;
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==FORWARDSLASH) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:85:70: filenameList+= FORWARDSLASH filenameList+= ID
                    	    {
                    	    filenameList=(Token)match(input,FORWARDSLASH,FOLLOW_FORWARDSLASH_in_sigmax266);  
                    	    stream_FORWARDSLASH.add(filenameList);

                    	    if (list_filenameList==null) list_filenameList=new ArrayList();
                    	    list_filenameList.add(filenameList);

                    	    filenameList=(Token)match(input,ID,FOLLOW_ID_in_sigmax270);  
                    	    stream_ID.add(filenameList);

                    	    if (list_filenameList==null) list_filenameList=new ArrayList();
                    	    list_filenameList.add(filenameList);


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt2 >= 1 ) break loop2;
                                EarlyExitException eee =
                                    new EarlyExitException(2, input);
                                throw eee;
                        }
                        cnt2++;
                    } while (true);



                    // AST REWRITE
                    // elements: column_no, directory, filenameList, filenameList
                    // token labels: directory, column_no
                    // rule labels: retval
                    // token list labels: filenameList
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleTokenStream stream_directory=new RewriteRuleTokenStream(adaptor,"token directory",directory);
                    RewriteRuleTokenStream stream_column_no=new RewriteRuleTokenStream(adaptor,"token column_no",column_no);
                    RewriteRuleTokenStream stream_filenameList=new RewriteRuleTokenStream(adaptor,"token filenameList", list_filenameList);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 85:116: -> ^( TOK_SIGMAX $column_no $directory ( $filenameList $filenameList)+ )
                    {
                        // com/zinnia/nectar/regression/antlr/language/parser/NectarParser.g:85:119: ^( TOK_SIGMAX $column_no $directory ( $filenameList $filenameList)+ )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(TOK_SIGMAX, "TOK_SIGMAX"), root_1);
